--- a/index.html
+++ b/index.html
@@ -18,191 +18,203 @@
   </head>
   <body>
     <header class="page-header">
-      <nav class="page-navigation">
-        <a class="logo-top link" href="./index.html"
-          >Web<span class="logo-part-top link">Studio</span></a
-        >
-        <ul class="page-navigation">
-          <li><a class="navigation link" href="./index.html">Studio</a></li>
-          <li><a class="navigation link" href="">Portfolio</a></li>
-          <li><a class="navigation link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="page-contact">
-        <ul>
-          <li>
-            <a class="contact-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="contact-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="page-header-container container">
+        <nav class="page-navigation">
+          <a class="logo-top link" href="./index.html"
+            >Web<span class="logo-part-top link">Studio</span></a
+          >
+          <ul class="page-navigation">
+            <li><a class="navigation link" href="./index.html">Studio</a></li>
+            <li><a class="navigation link" href="">Portfolio</a></li>
+            <li><a class="navigation link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="page-contact">
+          <ul class="header-contacts">
+            <li>
+              <a class="contact-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contact-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="section-one-color">
-        <h1 class="header-one">Effective Solutions for Your Business</h1>
-        <button class="button-style" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="header-one">Effective Solutions for Your Business</h1>
+          <button class="button-style" type="button">Order Service</button>
+        </div>
       </section>
       <section>
-        <h2 hidden>Advantages</h2>
-        <ul>
-          <li>
-            <h3 class="header-advantages">Strategy</h3>
-            <p class="header-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
+        <div class="container">
+          <h2 class="visually-hidden">Advantages</h2>
+          <ul>
+            <li>
+              <h3 class="header-advantages">Strategy</h3>
+              <p class="header-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="header-advantages">Punctuality</h3>
-            <p class="header-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
+            <li>
+              <h3 class="header-advantages">Punctuality</h3>
+              <p class="header-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="header-advantages">Diligence</h3>
-            <p class="header-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
+            <li>
+              <h3 class="header-advantages">Diligence</h3>
+              <p class="header-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="header-advantages">Technologies</h3>
-            <p class="header-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+            <li>
+              <h3 class="header-advantages">Technologies</h3>
+              <p class="header-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="section-two-color">
-        <h2 class="header-team">our team</h2>
-        <ul>
-          <li class="team-card-color">
-            <img
-              src="./images/team-1.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-position">Product Designer</p>
-          </li>
-          <li class="team-card-color">
-            <img
-              src="./images/team-2.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-position">Frontend Developer</p>
-          </li>
-          <li class="team-card-color">
-            <img
-              src="./images/team-3.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-position">Marketing</p>
-          </li>
-          <li class="team-card-color">
-            <img
-              src="./images/team-4.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-position">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="header-team">our team</h2>
+          <ul>
+            <li class="team-card-color">
+              <img
+                src="./images/team-1.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Mark Guerrero</h3>
+              <p class="team-position">Product Designer</p>
+            </li>
+            <li class="team-card-color">
+              <img
+                src="./images/team-2.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Tom Ford</h3>
+              <p class="team-position">Frontend Developer</p>
+            </li>
+            <li class="team-card-color">
+              <img
+                src="./images/team-3.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Camila Garcia</h3>
+              <p class="team-position">Marketing</p>
+            </li>
+            <li class="team-card-color">
+              <img
+                src="./images/team-4.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Daniel Wilson</h3>
+              <p class="team-position">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section>
-        <h2 class="header-portfolio">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/project-card-1.jpg"
-              alt="Banking App Interface Concept"
-              width="360"
-              height="300"
-            />
-            <h3 class="project-card-name">Banking App</h3>
-            <p class="project-card-description">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/project-card-2.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="project-card-name">Cashless Payment</h3>
-            <p class="project-card-description">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/project-card-3.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="project-card-name">Meditation App</h3>
-            <p class="project-card-description">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/project-card-4.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="project-card-name">Taxi Service</h3>
-            <p class="project-card-description">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/project-card-5.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="project-card-name">Screen Illustrations</h3>
-            <p class="project-card-description">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/project-card-6.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="project-card-name">Online Courses</h3>
-            <p class="project-card-description">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="header-portfolio">Our Portfolio</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/project-card-1.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+                height="300"
+              />
+              <h3 class="project-card-name">Banking App</h3>
+              <p class="project-card-description">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/project-card-2.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="project-card-name">Cashless Payment</h3>
+              <p class="project-card-description">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/project-card-3.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h3 class="project-card-name">Meditation App</h3>
+              <p class="project-card-description">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/project-card-4.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3 class="project-card-name">Taxi Service</h3>
+              <p class="project-card-description">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/project-card-5.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="project-card-name">Screen Illustrations</h3>
+              <p class="project-card-description">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/project-card-6.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="project-card-name">Online Courses</h3>
+              <p class="project-card-description">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer-color">
-      <a class="logo-bottom link" href="./index.html"
-        >Web<span class="logo-part-bottom link">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo-bottom link" href="./index.html"
+          >Web<span class="logo-part-bottom link">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
