--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a class="logo-top link" href="./index.html"
             >Web<span class="logo-part-top link">Studio</span></a
           >
-          <ul class="page-navigation">
+          <ul class="navigation-links">
             <li><a class="navigation link" href="./index.html">Studio</a></li>
             <li><a class="navigation link" href="">Portfolio</a></li>
             <li><a class="navigation link" href="">Contacts</a></li>
