--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
           <button class="button-style" type="button">Order Service</button>
         </div>
       </section>
-      <section>
+      <section class="agvantages">
         <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
-          <ul>
-            <li>
+          <ul class="advantages-list">
+            <li class="advantages-info">
               <h3 class="header-advantages">Strategy</h3>
               <p class="header-text">
                 Our goal is to identify the business problem to walk away with
@@ -64,7 +64,7 @@
               </p>
             </li>
 
-            <li>
+            <li class="advantages-info">
               <h3 class="header-advantages">Punctuality</h3>
               <p class="header-text">
                 Bring the key message to the brand's audience for the best price
@@ -72,7 +72,7 @@
               </p>
             </li>
 
-            <li>
+            <li class="advantages-info">
               <h3 class="header-advantages">Diligence</h3>
               <p class="header-text">
                 Research and confirm brands that present the strongest digital
@@ -80,7 +80,7 @@
               </p>
             </li>
 
-            <li>
+            <li class="advantages-info">
               <h3 class="header-advantages">Technologies</h3>
               <p class="header-text">
                 Design practice focused on digital experiences. We bring forth a
