--- a/index.html
+++ b/index.html
@@ -145,69 +145,81 @@
           </ul>
         </div>
       </section>
-      <section>
+      <section class="portfolio">
         <div class="container">
           <h2 class="header-portfolio">Our Portfolio</h2>
-          <ul>
-            <li>
+          <ul class="portfolio-list">
+            <li class="portfolio-items">
               <img
                 src="./images/project-card-1.jpg"
                 alt="Banking App Interface Concept"
                 width="360"
                 height="300"
               />
-              <h3 class="project-card-name">Banking App</h3>
-              <p class="project-card-description">App</p>
+              <div class="project-card">
+                <h3 class="project-card-name">Banking App</h3>
+                <p class="project-card-description">App</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-items">
               <img
                 src="./images/project-card-2.jpg"
                 alt="Cashless Payment"
                 width="360"
                 height="300"
               />
-              <h3 class="project-card-name">Cashless Payment</h3>
-              <p class="project-card-description">Marketing</p>
+              <div class="project-card">
+                <h3 class="project-card-name">Cashless Payment</h3>
+                <p class="project-card-description">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-items">
               <img
                 src="./images/project-card-3.jpg"
                 alt="Meditation App"
                 width="360"
                 height="300"
               />
-              <h3 class="project-card-name">Meditation App</h3>
-              <p class="project-card-description">App</p>
+              <div class="project-card">
+                <h3 class="project-card-name">Meditation App</h3>
+                <p class="project-card-description">App</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-items">
               <img
                 src="./images/project-card-4.jpg"
                 alt="Taxi Service"
                 width="360"
                 height="300"
               />
-              <h3 class="project-card-name">Taxi Service</h3>
-              <p class="project-card-description">Marketing</p>
+              <div class="project-card">
+                <h3 class="project-card-name">Taxi Service</h3>
+                <p class="project-card-description">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-items">
               <img
                 src="./images/project-card-5.jpg"
                 alt="Screen Illustrations"
                 width="360"
                 height="300"
               />
-              <h3 class="project-card-name">Screen Illustrations</h3>
-              <p class="project-card-description">Design</p>
+              <div class="project-card">
+                <h3 class="project-card-name">Screen Illustrations</h3>
+                <p class="project-card-description">Design</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-items">
               <img
                 src="./images/project-card-6.jpg"
                 alt="Online Courses"
                 width="360"
                 height="300"
               />
-              <h3 class="project-card-name">Online Courses</h3>
-              <p class="project-card-description">Marketing</p>
+              <div class="project-card">
+                <h3 class="project-card-name">Online Courses</h3>
+                <p class="project-card-description">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
